Fix community home overflowing
Fix https://gitlab.com/gitlab-org/gitter/webapp/issues/2272

--- a/public/less/base-web.less
+++ b/public/less/base-web.less
@@ -12,11 +12,13 @@ body {
 
 .layout-app {
   display: flex;
+  width: 100%;
   height: 100%;
 }
 
 .layout-app-body {
   position: relative;
   flex: 1;
+  min-width: 0;
   height: 100%;
 }
